testing/tests/ui/char_literal.stderr
error: invalid character
 --> testing/templates/char-literals/char-literal-1.txt:1:12
  |
       1 | {% let s = '\a' %}
         |            ^ close to this token
         |
 --> tests/ui/char_literal.rs:4:12
  |
4 | #[template(path = "char-literals/char-literal-1.txt")]
  |            ^^^^

error: invalid character
 --> testing/templates/char-literals/char-literal-2.txt:1:12
  |
       1 | {% let s = '\x' %}
         |            ^ close to this token
         |
 --> tests/ui/char_literal.rs:8:12
  |
8 | #[template(path = "char-literals/char-literal-2.txt")]
  |            ^^^^

error: invalid character
 --> testing/templates/char-literals/char-literal-3.txt:1:12
  |
       1 | {% let s = '\x1' %}
         |            ^ close to this token
         |
  --> tests/ui/char_literal.rs:12:12
   |
12 | #[template(path = "char-literals/char-literal-3.txt")]
   |            ^^^^

error: must be a character in the range [\x00-\x7f]
 --> testing/templates/char-literals/char-literal-4.txt:1:12
  |
       1 | {% let s = '\x80' %}
         |            ^ close to this token
         |
  --> tests/ui/char_literal.rs:16:12
   |
16 | #[template(path = "char-literals/char-literal-4.txt")]
   |            ^^^^

error: invalid character
 --> testing/templates/char-literals/char-literal-5.txt:1:12
  |
       1 | {% let s = '\u' %}
         |            ^ close to this token
         |
  --> tests/ui/char_literal.rs:20:12
   |
20 | #[template(path = "char-literals/char-literal-5.txt")]
   |            ^^^^

error: invalid character
 --> testing/templates/char-literals/char-literal-6.txt:1:12
  |
       1 | {% let s = '\u{}' %}
         |            ^ close to this token
         |
  --> tests/ui/char_literal.rs:24:12
   |
24 | #[template(path = "char-literals/char-literal-6.txt")]
   |            ^^^^

error: unicode escape must be at most 10FFFF
 --> testing/templates/char-literals/char-literal-7.txt:1:12
  |
       1 | {% let s = '\u{110000}' %}
         |            ^ close to this token
         |
  --> tests/ui/char_literal.rs:28:12
   |
28 | #[template(path = "char-literals/char-literal-7.txt")]
   |            ^^^^

error: invalid character
 --> <source attribute>:1:12
  |
       1 | {% let s = 'aaa' %}
         |            ^ close to this token
         |
  --> tests/ui/char_literal.rs:32:12
   |
32 | #[template(source = "{% let s = 'aaa' %}", ext = "html")]
   |            ^^^^^^
